build_log3.txt
[92m============================================[0m
[92m   3sx - Incremental Recompile              [0m
[92m============================================[0m

[92m[V] Using MSYS2 at: "C:\msys64"[0m

[93m[*] Incremental build in: D:\3sxtra\[0m

[92m[*] Starting MSYS2 MinGW64 incremental build...[0m

[1/5] Building C object CMakeFiles/3sx.dir/src/port/sdl/renderer/sdl_game_renderer_sdl_sw.c.obj
[2/5] Linking C static library SDL_shadercross\libSDL3_shadercross.a
[3/5] Linking C executable SDL_shadercross\shadercross.exe
[4/5] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/lua_engine_bridge.cpp.obj
FAILED: [code=1] CMakeFiles/3sx.dir/src/port/sdl/rmlui/lua_engine_bridge.cpp.obj 
C:\msys64\mingw64\bin\clang++.exe -DDEBUG -DGEKKONET_STATIC -DHAVE_UPNP -DNETPLAY_ENABLED -DRMLUI_SDL_VERSION_MAJOR=3 -DRMLUI_STATIC_LIB -DTARGET_SDL3 -DTRACY_ENABLE -D_POSIX_C_SOURCE=200809L -ID:/3sxtra/src -ID:/3sxtra/src/include -ID:/3sxtra/src/include/sdk -ID:/3sxtra/src/zlib -ID:/3sxtra/third_party/GekkoNet/GekkoLib/include -ID:/3sxtra/third_party/stb -ID:/3sxtra/third_party/librashader/include -ID:/3sxtra/third_party/simde -ID:/3sxtra/third_party/glad/cmake/include -ID:/3sxtra/build/gladsources/glad/include -ID:/3sxtra/third_party/sdl3/SDL/src/video/khronos -ID:/3sxtra/src/port/sdl/app -ID:/3sxtra/src/port/sdl/renderer -ID:/3sxtra/src/port/sdl/input -ID:/3sxtra/src/port/sdl/imgui -ID:/3sxtra/src/port/sdl/netplay -ID:/3sxtra/src/port/sdl/rmlui -ID:/3sxtra/src/port/config -ID:/3sxtra/src/port/save -ID:/3sxtra/src/port/mods -ID:/3sxtra/src/port/rendering -ID:/3sxtra/src/include/port/sdl/app -ID:/3sxtra/src/include/port/sdl/renderer -ID:/3sxtra/src/include/port/sdl/input -ID:/3sxtra/src/include/port/config -ID:/3sxtra/src/include/port/save -ID:/3sxtra/src/include/port/rendering -ID:/3sxtra/third_party/Spout2/SPOUTSDK/SpoutGL -ID:/3sxtra/third_party/imgui -ID:/3sxtra/third_party/imgui/backends -ID:/3sxtra/third_party/rmlui/Backends -ID:/3sxtra/third_party/sdl3/build/include -ID:/3sxtra/third_party/sdl3_image/build/include -ID:/3sxtra/third_party/sdl3_mixer/build/include -ID:/3sxtra/build/gladsources/glad_gl_core/include -ID:/3sxtra/third_party/SDL_shadercross/include -ID:/3sxtra/third_party/rmlui/Include -isystem D:/3sxtra/third_party/lua/src -isystem D:/3sxtra/build/_deps/tracy-src/public -O2 -g -DNDEBUG -Wall -Werror -fno-strict-aliasing -mavx2 -mfma -MD -MT CMakeFiles/3sx.dir/src/port/sdl/rmlui/lua_engine_bridge.cpp.obj -MF CMakeFiles\3sx.dir\src\port\sdl\rmlui\lua_engine_bridge.cpp.obj.d -o CMakeFiles/3sx.dir/src/port/sdl/rmlui/lua_engine_bridge.cpp.obj -c D:/3sxtra/src/port/sdl/rmlui/lua_engine_bridge.cpp
D:/3sxtra/src/port/sdl/rmlui/lua_engine_bridge.cpp:432:19: error: no matching function for call to 'SDL_ReadIO'
  432 |     Sint64 read = SDL_ReadIO(rw, buf, 1, (size_t)size);
      |                   ^~~~~~~~~~
D:/3sxtra/third_party/sdl3/build/include/SDL3/SDL_iostream.h:604:36: note: candidate function not viable: requires 3 arguments, but 4 were provided
  604 | extern SDL_DECLSPEC size_t SDLCALL SDL_ReadIO(SDL_IOStream *context, void *ptr, size_t size);
      |                                    ^          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
ninja: build stopped: subcommand failed.

[91m[X] Build failed with exit code: 1[0m
